Add subject and teacher handlers, code revisions
