# cmd/server/apihandlers.go
@@ -13,11 +13,12 @@ import (
 // @Schemes
 // @Description Returns the user's timeline from today to 30 days in the past.
 // @Tags timeline
-// @Param token header string true "JWT token"
+// @Param Authorization header string true "JWT token"
 // @Produce json
+// @Security Bearer
 // @Success 200 {object} Timeline
-// @Failure 401 {object} RecentTimelineUnauthorizedResponse
-// @Failure 500 {object} RecentTimelineInternalErrorResponse
+// @Failure 401 {object} UnauthorizedResponse
+// @Failure 500 {object} InternalErrorResponse
 // @Router /api/timeline/recent [get]
 func RecentTimelineHandler(c *gin.Context) {
 	client := c.MustGet("client").(*edupage.EdupageClient)
@@ -36,12 +37,13 @@ func RecentTimelineHandler(c *gin.Context) {
 // @Schemes
 // @Description Returns the user's timeline from any date to any other date or today.
 // @Tags timeline
-// @Param token header string true "JWT token"
+// @Param Authorization header string true "JWT token"
 // @Param range query TimelineRequest true "Date range"
 // @Produce json
+// @Security Bearer
 // @Success 200 {object} Timeline
-// @Failure 401 {object} TimelineUnauthorizedResponse
-// @Failure 500 {object} TimelineInternalErrorResponse
+// @Failure 401 {object} UnauthorizedResponse
+// @Failure 500 {object} InternalErrorResponse
 // @Router /api/timeline [get]
 func TimelineHandler(c *gin.Context) {
 	client := c.MustGet("client").(*edupage.EdupageClient)
@@ -79,11 +81,12 @@ func TimelineHandler(c *gin.Context) {
 // @Schemes
 // @Description Returns the user's timetable from before yesterday to 7 days in the future.
 // @Tags timetable
-// @Param token header string true "JWT token"
+// @Param Authorization header string true "JWT token"
 // @Produce json
+// @Security Bearer
 // @Success 200 {object} model.Timetable
-// @Failure 401 {object} TimetableUnauthorizedResponse
-// @Failure 500 {object} TimetableInternalErrorResponse
+// @Failure 401 {object} UnauthorizedResponse
+// @Failure 500 {object} InternalErrorResponse
 // @Router /api/timetable/recent [get]
 func RecentTimetableHangler(c *gin.Context) {
 	client := c.MustGet("client").(*edupage.EdupageClient)
@@ -102,12 +105,13 @@ func RecentTimetableHangler(c *gin.Context) {
 // @Schemes
 // @Description Returns the user's timetable from date specified to date specified or today.
 // @Tags timetable
-// @Param token header string true "JWT token"
+// @Param Authorization header string true "JWT token"
 // @Param range query TimetableRequest true "Date range"
 // @Produce json
+// @Security Bearer
 // @Success 200 {object} model.Timetable
-// @Failure 401 {object} TimetableUnauthorizedResponse
-// @Failure 500 {object} TimetableInternalErrorResponse
+// @Failure 401 {object} UnauthorizedResponse
+// @Failure 500 {object} InternalErrorResponse
 // @Router /api/timetable [get]
 func TimetableHandler(c *gin.Context) {
 	client := c.MustGet("client").(*edupage.EdupageClient)
@@ -145,19 +149,47 @@ func TimetableHandler(c *gin.Context) {
 // @Schemes
 // @Description Returns the subject by ID.
 // @Tags DBI
-// @Param token header string true "JWT token"
-// @Param id param string true "Subject ID"
+// @Param Authorization header string true "JWT token"
+// @Param id path string true "Subject ID"
 // @Produce json
-// @Success 200 {object} Subject
-// @Failure 401 {object} SubjectUnauthorizedResponse
-// @Failure 500 {object} SubjectInternalErrorResponse
-// @Router /api/subject/:id [get]
+// @Security Bearer
+// @Success 200 {object} model.Subject
+// @Failure 401 {object} UnauthorizedResponse
+// @Failure 500 {object} InternalErrorResponse
+// @Router /api/subject/{id} [get]
 func SubjectHandler(c *gin.Context) {
 	client := c.MustGet("client").(*edupage.EdupageClient)
 
 	id := c.Param("id")
 
 	subject, err := client.GetSubjectByID(id)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, subject)
+}
+
+// TeacherHandler godoc
+// @Summary Get the teacher by ID
+// @Schemes
+// @Description Returns the teacher by ID.
+// @Tags DBI
+// @Param Authorization header string true "JWT token"
+// @Param id path string true "Teacher ID"
+// @Produce json
+// @Security Bearer
+// @Success 200 {object} model.Teacher
+// @Failure 401 {object} UnauthorizedResponse
+// @Failure 500 {object} InternalErrorResponse
+// @Router /api/teacher/{id} [get]
+func TeacherHandler(c *gin.Context) {
+	client := c.MustGet("client").(*edupage.EdupageClient)
+
+	id := c.Param("id")
+
+	subject, err := client.GetTeacherByID(id)
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
