# docs/swagger.json
@@ -1,15 +1,126 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is the backend for the EduPage2 app.",
+        "description": "JWT authorization token",
         "title": "EduPage2 API",
         "contact": {},
         "version": "1.0"
     },
     "basePath": "/",
     "paths": {
+        "/api/subject/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Returns the subject by ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "DBI"
+                ],
+                "summary": "Get the subject by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Subject ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Subject"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.UnauthorizedResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.InternalErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/teacher/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Returns the teacher by ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "DBI"
+                ],
+                "summary": "Get the teacher by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Teacher ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Teacher"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/main.UnauthorizedResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.InternalErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/timeline": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Returns the user's timeline from any date to any other date or today.",
                 "produces": [
                     "application/json"
@@ -22,7 +133,7 @@
                     {
                         "type": "string",
                         "description": "JWT token",
-                        "name": "token",
+                        "name": "Authorization",
                         "in": "header",
                         "required": true
                     },
@@ -50,13 +161,13 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/main.TimelineUnauthorizedResponse"
+                            "$ref": "#/definitions/main.UnauthorizedResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/main.TimelineInternalErrorResponse"
+                            "$ref": "#/definitions/main.InternalErrorResponse"
                         }
                     }
                 }
@@ -64,6 +175,11 @@
         },
         "/api/timeline/recent": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Returns the user's timeline from today to 30 days in the past.",
                 "produces": [
                     "application/json"
@@ -76,7 +192,7 @@
                     {
                         "type": "string",
                         "description": "JWT token",
-                        "name": "token",
+                        "name": "Authorization",
                         "in": "header",
                         "required": true
                     }
@@ -91,13 +207,13 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/main.RecentTimelineUnauthorizedResponse"
+                            "$ref": "#/definitions/main.UnauthorizedResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/main.RecentTimelineInternalErrorResponse"
+                            "$ref": "#/definitions/main.InternalErrorResponse"
                         }
                     }
                 }
@@ -105,6 +221,11 @@
         },
         "/api/timetable": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Returns the user's timetable from date specified to date specified or today.",
                 "produces": [
                     "application/json"
@@ -117,7 +238,7 @@
                     {
                         "type": "string",
                         "description": "JWT token",
-                        "name": "token",
+                        "name": "Authorization",
                         "in": "header",
                         "required": true
                     },
@@ -145,13 +266,13 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/main.TimetableUnauthorizedResponse"
+                            "$ref": "#/definitions/main.UnauthorizedResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/main.TimetableInternalErrorResponse"
+                            "$ref": "#/definitions/main.InternalErrorResponse"
                         }
                     }
                 }
@@ -159,6 +280,11 @@
         },
         "/api/timetable/recent": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Returns the user's timetable from before yesterday to 7 days in the future.",
                 "produces": [
                     "application/json"
@@ -171,7 +297,7 @@
                     {
                         "type": "string",
                         "description": "JWT token",
-                        "name": "token",
+                        "name": "Authorization",
                         "in": "header",
                         "required": true
                     }
@@ -186,13 +312,13 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/main.TimetableUnauthorizedResponse"
+                            "$ref": "#/definitions/main.UnauthorizedResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/main.TimetableInternalErrorResponse"
+                            "$ref": "#/definitions/main.InternalErrorResponse"
                         }
                     }
                 }
@@ -202,7 +328,6 @@
             "post": {
                 "description": "Logs in to your Edupage account using the provided credentials.",
                 "consumes": [
-                    "application/json",
                     "multipart/form-data",
                     "application/x-www-form-urlencoded"
                 ],
@@ -215,20 +340,24 @@
                 "summary": "Login to your Edupage account",
                 "parameters": [
                     {
-                        "description": "Login using username and password",
-                        "name": "login",
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/definitions/main.LoginRequestUsernamePassword"
-                        }
+                        "type": "string",
+                        "description": "Username",
+                        "name": "username",
+                        "in": "formData",
+                        "required": true
                     },
                     {
-                        "description": "Login using username, password and server",
-                        "name": "loginServer",
-                        "in": "body",
-                        "schema": {
-                            "$ref": "#/definitions/main.LoginRequestUsernamePasswordServer"
-                        }
+                        "type": "string",
+                        "description": "Password",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Server",
+                        "name": "server",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -358,6 +487,15 @@
                 "znamky_udalostid": {}
             }
         },
+        "main.InternalErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "failed to create payload"
+                }
+            }
+        },
         "main.LoginBadRequestResponse": {
             "type": "object",
             "properties": {
@@ -381,40 +519,6 @@
                 "success": {
                     "type": "boolean",
                     "example": false
-                }
-            }
-        },
-        "main.LoginRequestUsernamePassword": {
-            "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
-            "properties": {
-                "password": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "main.LoginRequestUsernamePasswordServer": {
-            "type": "object",
-            "required": [
-                "password",
-                "server",
-                "username"
-            ],
-            "properties": {
-                "password": {
-                    "type": "string"
-                },
-                "server": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         },
@@ -456,24 +560,6 @@
                 }
             }
         },
-        "main.RecentTimelineInternalErrorResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string",
-                    "example": "failed to create payload"
-                }
-            }
-        },
-        "main.RecentTimelineUnauthorizedResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string",
-                    "example": "Unauthorized"
-                }
-            }
-        },
         "main.Timeline": {
             "type": "object",
             "properties": {
@@ -488,15 +574,6 @@
                     "additionalProperties": {
                         "$ref": "#/definitions/main.TimelineItemReduced"
                     }
-                }
-            }
-        },
-        "main.TimelineInternalErrorResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string",
-                    "example": "failed to create payload"
                 }
             }
         },
@@ -538,25 +615,7 @@
                 }
             }
         },
-        "main.TimelineUnauthorizedResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string",
-                    "example": "Unauthorized"
-                }
-            }
-        },
-        "main.TimetableInternalErrorResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string",
-                    "example": "failed to create payload"
-                }
-            }
-        },
-        "main.TimetableUnauthorizedResponse": {
+        "main.UnauthorizedResponse": {
             "type": "object",
             "properties": {
                 "error": {
@@ -592,6 +651,55 @@
                 "success": {
                     "type": "boolean",
                     "example": false
+                }
+            }
+        },
+        "model.Subject": {
+            "type": "object",
+            "properties": {
+                "cbhidden": {
+                    "type": "boolean"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "short": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Teacher": {
+            "type": "object",
+            "properties": {
+                "classroomid": {
+                    "type": "string"
+                },
+                "datefrom": {
+                    "type": "string"
+                },
+                "dateto": {
+                    "type": "string"
+                },
+                "firstname": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "isout": {
+                    "type": "boolean"
+                },
+                "lastname": {
+                    "type": "string"
+                },
+                "short": {
+                    "type": "string"
                 }
             }
         },
